# mobius-constant

./: .gitignore  README.md  pyproject.toml
src/mobius_constant/: __init__.py  _digits.py  core.py
tests/: test_constant.py
