[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobius-constant"
version = "0.1.0"
description = "Exact irrational constants — sqrt(2)**2 == 2, by construction."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["mpmath>=1.3.0"]
authors = [
    { name = "Jay Carpenter" },
]
keywords = [
    "floating-point",
    "irrational",
    "precision",
    "exact",
    "pi",
    "sqrt",
    "constants",
    "mobius",
    "fine-structure",
    "alpha",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/JustNothingJay/mobius-constant"
Repository = "https://github.com/JustNothingJay/mobius-constant"
Issues = "https://github.com/JustNothingJay/mobius-constant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mobius_constant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
